# verilator-python

./: .bumpversion.cfg  .copier-answers.yaml  .copier-answers.yml  .gitignore  .gitmodules  Makefile  README.md  hatch_build.py  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml
verilator/: cli.py
