[build-system]
requires = ["hatchling"]
build-backend="hatchling.build"

[project]
name = "verilator"
authors = [{name = "the verilator-python authors", email = "dev@dau.dev"}]
description = "Python wrapping/binding for verilator"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "5.30.2"
requires-python = ">=3.9"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
cli = [
    "rich",
    "typer",
]
develop = [
    "build",
    "cibuildwheel",
    "hatchling",
    "pytest",
    "pytest-cov",
    "twine",
    "wheel",
]

[project.scripts]
verilator-cli = "verilator.cli:main"

[project.urls]
Repository = "https://github.com/dau-dev/verilator-python"
Homepage = "https://github.com/dau-dev/verilator-python"

[tool.bumpversion]
current_version = "5.30.3"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "verilator/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yml",
    "Makefile",
    "setup.py",
    "docs/**/*",
]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
test-command = "echo 'TODO'"
test-requires = []

[tool.cibuildwheel.linux]
before-all ="""
set -e
yum install bison ccache flex -y
export PATH=/usr/lib/ccache:/usr/local/opt/ccache/libexec:$PATH
git submodule update --init --recursive
cmake -B build src -DCMAKE_CXX_STANDARD=17 -DCMAKE_INSTALL_PREFIX=verilator
cmake --build build
cmake --install build
cp build/src/verilator verilator/bin/verilator_bin
echo "AR = ar" >> verilator/include/verilated.mk
echo "CXX = c++" >> verilator/include/verilated.mk
echo "LINK = c++" >> verilator/include/verilated.mk
echo "PYTHON3 = python" >> verilator/include/verilated.mk
rm -rf src build .gitmodules verilator/examples verilator/bin/verilator_ccache_report verilator/bin/verilator_difftree verilator/bin/verilator_gantt verilator/bin/verilator_profcfunc verilator/verilator-config-version.cmake verilator/verilator-config.cmake
"""
repair-wheel-command = ""
skip = "*i686 musllinux*"

[tool.cibuildwheel.macos]
before-all ="""
set -e
HOMEBREW_NO_AUTO_UPDATE=1 brew install bison ccache flex make ninja
brew unlink bison flex && brew link --force bison && brew link --force flex 
export PATH=/usr/lib/ccache:/usr/local/opt/ccache/libexec:$PATH
git submodule update --init --recursive
cmake -B build src -DCMAKE_CXX_STANDARD=17 -DCMAKE_INSTALL_PREFIX=verilator
cmake --build build
cmake --install build
cp build/src/verilator verilator/bin/verilator_bin
echo "AR = ar" >> verilator/include/verilated.mk
echo "CXX = c++" >> verilator/include/verilated.mk
echo "LINK = c++" >> verilator/include/verilated.mk
echo "PYTHON3 = python" >> verilator/include/verilated.mk
rm -rf src build .gitmodules verilator/examples verilator/bin/verilator_ccache_report verilator/bin/verilator_difftree verilator/bin/verilator_gantt verilator/bin/verilator_profcfunc verilator/verilator-config-version.cmake verilator/verilator-config.cmake
"""
repair-wheel-command = ""
environment = {MACOSX_DEPLOYMENT_TARGET="11.0"}
archs = "arm64"

[tool.cibuildwheel.windows]
before-all ="""
git submodule update --init --recursive
cmake -B build src -DCMAKE_CXX_STANDARD=17 -DCMAKE_INSTALL_PREFIX=verilator
cmake --build build
cmake --install build
cp build/src/verilator verilator/bin/verilator_bin
rm -rf src build .gitmodules verilator/examples verilator/bin/verilator_ccache_report verilator/bin/verilator_difftree verilator/bin/verilator_gantt verilator/bin/verilator_profcfunc verilator/verilator-config-version.cmake verilator/verilator-config.cmake
"""
archs = "AMD64"
skip = "*win32 *arm_64"	

[tool.coverage.run]
branch = true
omit = [
    "verilator/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = [
    "verilator/bin/",
    "verilator/include/",
    "verilator/tests/",
]
[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.wheel.hooks.custom]

[tool.hatch.build.targets.wheel]
packages = ["verilator"]
exclude = [
    "/.github",
    "/scripts",
    "/src",
    "/.gitmodules",
    "/.gitignore",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
asyncio_mode = "strict"
testpaths = "python_template/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["verilator"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
